--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     {{name}}
     {{post_id}}
 <!-- {{4+5}} is a expressions  with Jinja with flask-->
+    <h2>This is the background</h2>
     <script src="static/script.js"></script>
 <!--put static folder for run css and js because they are static they are not change-->
 </body>
