--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shorcut icon" href="{{ url_for('static', filename ='lightning_thunderbolt.ico') }}">
 </head>
 <body>
-    <h1>Background Generator</h1>
+    <h1>Background Generator!</h1>
     I AM A WEB MASTER
     {{4+5}}
     {{name}}
