--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="shorcut icon" href="{{ url_for('static', filename ='lightning_thunderbolt.ico') }}">
 </head>
 <body>
+    <h1>Background Generator</h1>
     I AM A WEB MASTER
     {{4+5}}
     {{name}}
     {{post_id}}
 <!-- {{4+5}} is a expressions  with Jinja with flask-->
     <h2>This is the background</h2>
-    <h3></h3>
     <script src="static/script.js"></script>
 <!--put static folder for run css and js because they are static they are not change-->
 </body>
